# randcast.test

./: meson.build  tsconfig.json  vhost-crumbBox.conf  vhost.conf
css/: catppuccin.css  hack-nerd-font-mono.css  nf.css  style.css
html/: 404.html  index.html
jsb/: script.js
src/: catppuccin.dart  helpers.dart  main.dart  main.ts  pubspec.yaml  weatherapi.ts
src/.dart_tool/: package_config.json
src/cgi/: askupdate.lua  dump  hi  main.sh  makepost.lua
